--- a/src/Markdown.Xaml.Tests/packages.config
+++ b/src/Markdown.Xaml.Tests/packages.config
@@ -1,10 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ApprovalTests" version="2.1" targetFramework="net45" />
+  <package id="ApprovalTests" version="4.2.2" targetFramework="net462" />
+  <package id="ApprovalUtilities" version="4.2.2" targetFramework="net462" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.4" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.4" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.CodeQuality.Analyzers" version="2.9.4" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.NetCore.Analyzers" version="2.9.4" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.NetFramework.Analyzers" version="2.9.4" targetFramework="net45" developmentDependency="true" />
-  <package id="NUnit" version="2.6.2" targetFramework="net45" />
+  <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net462" />
+  <package id="NUnit" version="3.12.0" targetFramework="net45" />
+  <package id="System.Data.SqlClient" version="4.6.1" targetFramework="net462" />
+  <package id="System.Drawing.Common" version="4.5.1" targetFramework="net462" />
+  <package id="System.Management" version="4.5.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net462" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net462" />
+  <package id="TextCopy" version="1.7.1" targetFramework="net462" />
 </packages>
