--- a/src/Markdown.Xaml.Demo/Markdown.Demo.csproj
+++ b/src/Markdown.Xaml.Demo/Markdown.Demo.csproj
@@ -66,6 +66,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BoolToEnabledConverter.cs" />
+    <Compile Include="DemoViewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
